fix: header alignment issues

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,4 +1,8 @@
 header {
-  display: grid;
-  grid-template-columns: 200px 1fr 150px 300px;
+  display: flex;
+  justify-content: space-around;
+}
+
+.ember-basic-dropdown-trigger {
+  min-width: 100px;
 }
